style: BusiOm/BusiPrdOrd 使用 Double.valueOf 替代 new Double 装箱